    logging output.
  - I tried to convert as much of the actual codebase to use unicode for
    printing. But I stopped short of adding an assert in log.py to enforce
    unicode, because I didn't want to go through all the backend code and
    manually adjust those bits without being able to test each one.
* Restored missing line from patch of gdocsbackend.py


New in v0.6.22 (2013/08/22)
---------------------------
Enhancements:
* Applied patches from Laszlo Ersek to rdiffdir to "consume a chain of sigtar
  files in rdiffdir delta mode" which supports incremental sigtar files.
* Merged in lp:~jnoster/duplicity/dpbx-added
  - Add Dropbox backend
  - NB! In order to use the backend one must:
    1. Install Dropbox Python SDK first.
    2. Run the duplicity with Dropbox backend (dpbx://) first time
       *interactively* to catch and follow the oAuth URL.
* Merged in lp:~ed.so/duplicity/verify.data
  - add switch --compare-data, to selectively enable formerly always disabled
    data comparison on verify runs
* Merged in lp:~tblue/duplicity/paramiko-1.10.0
  - This fixes bug #1156746, making the Paramiko backend compatible with
    Paramiko 1.10.0. It keeps compatibility with older Paramiko versions.
* Merged in lp:~townsend/duplicity/fix-1161599-2
  - The fix in revno. 912 didn't take into account that the parameter "body"
    passed into request() is overloaded, so when it was NULL or of a type other
    than file, it would fail.  This checks if "body" is of type "file" before
    actually seek()'ing back to the beginning of the file.
* Merged in lp:~tblue/duplicity/paramiko-fix-delete-retry
  - This fixes bug #1115715, which is really annoying. Basically it makes
    using the Paramiko backend with the default settings impossible.
* Merged in lp:~juan-f/duplicity/progress
  - From time ago, there are people asking for a progress bar estimation in duplicity.
    There is even a script that circumvents the issue, getting info from the log so as